<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInOut.SignInActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingTop="50sp"
    android:paddingHorizontal="20sp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <EditText
        android:id="@+id/et_email_signin"
        android:background="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/email"
        android:paddingHorizontal="10sp"
        android:inputType="textEmailAddress"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />
    <EditText
        android:id="@+id/et_password_signin"
        android:background="@color/colorwhite"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="10sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15sp" />

    <Button
        android:id="@+id/btn_submit_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/start_btn"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/signin"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>

    <ProgressBar
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignLeft="@+id/progressBar"
        android:id="@+id/pleaseWait"/>
</RelativeLayout>